--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap");
 * {
   font-family: "Rubik", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -16,7 +19,7 @@ body {
   text-align: center;
   position: absolute;
 }
-.intro .overlay-itro {
+.intro .overlay-intro {
   background-color: rgba(0, 0, 0, 0.6);
   position: absolute;
   top: 0;
@@ -38,4 +41,24 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
+}
+.about-img:hover {
+  transform: scale(1.2);
+  border-radius: 10px;
+}
+.service-box:hover {
+  transform: scale(1.05);
+}
+.service-box:hover .icons {
+  transform: scale(1.3);
+  color: #0d6efd;
+  border-color: black !important;
+}
+.portfolio-link {
+  text-decoration: none;
+  color: black;
+}
+.portfolio-img:hover {
+  transform: scale(1.01);
+  border-radius: 20px;
 }
